--- a/EBLF.html
+++ b/EBLF.html
@@ -11,7 +11,7 @@
 
 
 
-<title>中国常绿阔叶林系统表</title>
+<title>中国常绿阔叶林分类系统表</title>
 
 <script src="site_libs/header-attrs-2.29/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
@@ -272,7 +272,7 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">中国常绿阔叶林系统表</h1>
+<h1 class="title toc-ignore">中国常绿阔叶林分类系统表</h1>
 
 </div>
 
@@ -1245,9 +1245,9 @@ All.</a></span>
 </details>
 <details open>
 <summary>
-<span class="sys - tier tier4">13. 异叶鹅掌柴 -
-秃枝润楠群落目</span><span class="sys - code"><em>Heptapleuro
-chapanum</em>-<em>Machiletalia kurzii</em></span>
+<span class="sys - tier tier4">13. 异叶鹅掌柴-秃枝润楠群落目</span><span
+class="sys - code"><em>Heptapleuro chapanum</em>-<em>Machiletalia
+kurzii</em></span>
 </h4>
 </summary>
 <details close>
@@ -1351,8 +1351,9 @@ indochinensis</em> All.</a></span>
 <details open>
 <summary>
 <span class="sys - tier tier4">16. 青冈-木荷-大头茶群落目</span><span
-class="sys - code"><em>Querceo</em> (<em>Cyclobalanopsio</em>) -
-<em>Schimo</em>-<em>Polysporetalia</em> (<em>Gordonietalia</em>)</span>
+class="sys - code"><em>Querceo</em>
+(<em>Cyclobalanopsio</em>)-<em>Schimo</em>-<em>Polysporetalia</em>
+(<em>Gordonietalia</em>)</span>
 </h4>
 </summary>
 <details close>
@@ -1381,8 +1382,7 @@ class="sys - code"> <a href="Alli-2a47.html"><em>Quercus</em>
 48）<a href="Alli-2a48.html">山榄-大头茶-星刺锥-港口木荷群团</a><span
 class="sys - code"> <a href="Alli-2a48.html"><em>Planchonella
 obovata</em>-<em>Polyspora axillaris</em>-<em>Castanopsis
-fabri</em>-<em>Schima superba</em> var. <em>kankoensis</em>
-All.</a></span>
+fabri</em>-<em>Schima superba var. kankoensis</em> All.</a></span>
 </h6>
 </summary>
 <div>
@@ -1412,7 +1412,7 @@ Ombrophilous EBLF Division = <em>Fico-Machiliea</em></span>
 <summary>
 <span class="sys - tier tier3">IIIA-1.
 大陆东部适雨常绿阔叶林：山蒲桃-榕-锥群落纲</span><span
-class="latin"><em>Syzygio levinei</em>-<em>Fico</em> -
+class="latin"><em>Syzygio levinei</em>-<em>Fico</em>-
 <em>Castanopsietea</em></span>
 </summary>
 <details open>
